Create global, centered modal

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -13,3 +13,20 @@ a
   background: #ccc
   transition: left 0.1s linear
   padding: 20px
+
+.center_modal
+  width: 400px
+  height: 200px
+  background: #ccc
+  z-index: 100
+  padding: 20px
+
+#modal_layer
+  display: none
+  position: fixed
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
+  z-index: 99
+  background: rgba(42, 42, 42, .95)
