User views starting fists

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -3,3 +3,17 @@ body
 
 a
   cursor: pointer
+
+.hand
+  background: blue
+  height: 350px
+  width: 350px
+  margin: 0 100px 0 0
+  display: inline-block
+
+.left_fist
+  background: url('fist_left.png') no-repeat center left
+
+.right_fist
+  background: url('fist_right.png') no-repeat center left
+
