Rename image files with direction first

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -12,8 +12,19 @@ a
   display: inline-block
 
 .left_fist
-  background: url('fist_left.png') no-repeat center left
+  background: url('left_fist.png') no-repeat center left
 
 .right_fist
-  background: url('fist_right.png') no-repeat center left
+  background: url('right_fist.png') no-repeat center left
 
+.left_paper
+  background: url('left_paper.png') no-repeat center left
+
+.right_paper
+  background: url('right_paper.png') no-repeat center left
+
+.left_scissors
+  background: url('scissors_left.png') no-repeat center left
+
+.right_scissors
+  background: url('scissors_right.png') no-repeat center left
