--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -4,8 +4,14 @@ body
 a
   cursor: pointer
 
+section.table
+  background: url('table.jpg') no-repeat
+  background-position: 0px 100px
+  height: 900px
+
 #hand_area
   height: 500px
+  margin-left: 40px
 
   .hand
     height: 350px
@@ -13,24 +19,27 @@ a
     margin: 0 100px 0 0
     display: inline-block
     transition: padding .2s linear
+    &:first-of-type
+      cursor: pointer
 
-.left_fist
-  background: url('left_fist.png') no-repeat center left
+  .left_rock
+    background: url('left_rock.png') no-repeat center left
 
-.right_fist
-  background: url('right_fist.png') no-repeat center left
+  .right_rock
+    background: url('right_rock.png') no-repeat center left
 
-.left_paper
-  background: url('left_paper.png') no-repeat center left
+  .left_paper
+    background: url('left_paper.png') no-repeat center left
 
-.right_paper
-  background: url('right_paper.png') no-repeat center left
+  .right_paper
+    background: url('right_paper.png') no-repeat center left
 
-.left_scissors
-  background: url('scissors_left.png') no-repeat center left
+  .left_scissors
+    background: url('left_scissors.png') no-repeat center left
 
-.right_scissors
-  background: url('scissors_right.png') no-repeat center left
+  .right_scissors
+    background: url('right_scissors.png') no-repeat center left
+
 
 input[type='submit']
   padding: 10px 30px
