Show win/loss/tie message

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -57,3 +57,21 @@ input[disabled=disabled][type='submit']
 #stats
   float: right
   margin: 0 20% 0 0
+
+.message
+  font-size: 25px
+  display: none
+  position: fixed
+  top: 100px
+  left: 340px
+  background: #ddd
+  padding: 20px 40px
+
+#win_message
+  color: green
+
+#loss_message
+  color: red
+
+#tie_message
+  color: orange
