--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -57,6 +57,9 @@ input[disabled=disabled][type='submit']
 #stats
   float: right
   margin: 0 20% 0 0
+  .stat
+    display: inline-block
+    margin-right: 20px
 
 .message
   font-size: 25px
