Prevent user from selecting hand area while clicking hand

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -12,6 +12,11 @@ section.table
 #hand_area
   height: 500px
   margin-left: 40px
+  -webkit-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  -o-user-select: none
+  user-select: none
 
   .hand
     height: 350px
